# svgrust

./: .gitignore  Cargo.toml
src/: angle.rs  field.rs  grid.rs  group.rs  layout.rs  lib.rs  pen.rs  prelude.rs  render.rs  seed.rs  shapes.rs  sketch.rs  style.rs  traits.rs  uom.rs  vec2.rs  vec3.rs  vectorfield.rs
src/shapes/: circle.rs  edge.rs  hexagon.rs  linestring.rs  polygon.rs  rectangle.rs  triangle.rs
src/traits/: packing.rs
