[package]
name = "svgrust"
version = "0.1.0"
edition = "2021"

[lib]
name = "plt"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.79"
approx = "0.5.1"
cargo-watch = "8.5.2"
delaunator = "1.0.2"
fast_poisson = "1.0.0"
geo = "0.27.0"
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.10.0"
rstest = "0.21.0"
svg = "0.14.0"
